src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Opt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Clearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA/QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Project</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>NPI</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Formula for an Existing Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Brand Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Manufacturing and WH Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sales Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Spec Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material Intro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Changes for Existing Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unduplicated_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Unduplicated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserActivity__c</fullName>
        <formula>IF(LastModifiedById = $User.Id, 1,0  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserActivity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Projects and Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Department__c</columns>
        <columns>Project_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRJ-{0000000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects and Approval</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>